--- a/index.html
+++ b/index.html
@@ -4,7 +4,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css">  
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
+        <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
+  <header class="header">
+    <nav class="header__menu">
+      <ul class="header__links-list">
+        <li class="header__link-item_active">
+          <a class="header__link header__link-item_active">Главная</a>
+        </li>
+        <li class="header__link-item_active">
+          <a class="header__link header__link-item_active">посмотреть лоты</a>
+        </li>
+        <li class="header__link-item_active">
+          <a class="header__link header__link-item_active">об аукционе</a>
+        </li>
+      </ul>
+    </nav>
+    <a class="header__logo" href="#">
+      <img 
+      src="./images/logo-black.svg" 
+      alt="Логотип черный">
+  </header>
+    <main>
+
+    </main>
+    <cover>
+
+    </cover>
+    <lots>
+
+    </lots>
+    <about>
+
+    </about>
+    <footer></footer>
+
+  
   <body></body>
 </html>
