--- a/index.html
+++ b/index.html
@@ -10,23 +10,31 @@
         <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <header class="header">
-    <nav class="header__menu">
+    <nav>
       <ul class="header__links-list">
-        <li class="header__link-item_active">
-          <a class="header__link header__link-item_active">Главная</a>
+        <li class="header__links-item">
+          <a class="header__links-item header__links-item_active">Главная</a>
         </li>
-        <li class="header__link-item_active">
-          <a class="header__link header__link-item_active">посмотреть лоты</a>
+        <li class="header__links-item">
+          <a class="header__link" href="#">посмотреть лоты</a>
         </li>
-        <li class="header__link-item_active">
-          <a class="header__link header__link-item_active">об аукционе</a>
+        <li class="header__links-item">
+          <a class="header__link" href="#">об аукционе</a>
         </li>
-      </ul>
+         </ul>
     </nav>
-    <a class="header__logo" href="#">
+    <a class="header__logo">
       <img 
+      class="header__logo-image"
       src="./images/logo-black.svg" 
       alt="Логотип черный">
+      
+    </a>
+            <address class="address header__address"> 
+          <a class="header__link" href="+9 999 555 5555">+9 999 555 5555</a>
+          <a class="header__link" href="info@sobaka.ge">info@sobaka.ge</a>
+          <p>наб. Принсенграхт 263-265, Амстердам</p>
+        </address>
   </header>
     <main>
 
