--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/style.css">
         <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
+  <body>
   <header class="header">
     <nav>
       <ul class="header__links-list">
@@ -28,28 +29,18 @@
       class="header__logo-image"
       src="./images/logo-black.svg" 
       alt="Логотип черный">
-      
-    </a>
-            <address class="address header__address"> 
+      </a>
+          <address class="address header__address"> 
           <a class="header__link" href="+9 999 555 5555">+9 999 555 5555</a>
           <a class="header__link" href="info@sobaka.ge">info@sobaka.ge</a>
           <p>наб. Принсенграхт 263-265, Амстердам</p>
         </address>
-  </header>
-    <main>
-
-    </main>
-    <cover>
-
-    </cover>
-    <lots>
-
-    </lots>
-    <about>
-
-    </about>
-    <footer></footer>
-
-  
-  <body></body>
+  </header> 
+  <main>
+      <section class="cover"></section>
+      <section></section>
+      <section></section>
+  </main>
+      <footer></footer>
+  </body>
 </html>
