--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       alt="Логотип черный">
       </a>
           <address class="address header__address"> 
-          <a class="header__link" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+          <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
           <a class="header__link" href="Email:info@sobaka.ge">info@sobaka.ge</a>
           <p>наб. Принсенграхт 263-265, Амстердам</p>
         </address>
