--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       src="./images/logo-black.svg" 
       alt="Логотип черный">
       </a>
-          <address class="address header__address"> 
-          <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
-          <a class="address__link" href="Email:info@sobaka.ge">info@sobaka.ge</a>
-          <p>наб. Принсенграхт 263-265, Амстердам</p>
+        <address class="address header__address">
+            <a class="address__link" href="tel:+99999555555">+9 999 555 5555</a>
+            <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+           <p>наб. Принсенграхт 263-265, Амстердам</p>
         </address>
   </header> 
   <main>
