--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <header class="header">
     <nav>
       <ul class="header__links-list">
-        <li class="header__links-item">
-          <a class="header__links-item header__links-item_active">Главная</a>
+        <li class="header__links-list-item">
+          <a class="header__links-list-item header__links-item_active">Главная</a>
         </li>
-        <li class="header__links-item">
+        <li class="header__links-list-item">
           <a class="header__link" href="#">посмотреть лоты</a>
         </li>
-        <li class="header__links-item">
+        <li class="header__links-list-item">
           <a class="header__link" href="#">об аукционе</a>
         </li>
          </ul>
@@ -88,7 +88,28 @@
             </ul>
             <a class="button lots__look-more-link">посмотреть больше</a>
        </section>
-      <section></section>
+      <section class="about">
+        <div class="about__column">
+          <div class="about__logo">
+            <img class="about__logo-image"
+                  src="./images/logo-white.svg"
+                  alt="Белый Логотип">
+          </div>
+        </div>
+        <div class="about__column">
+          <h4 class="about__title">Об аукционе</h4>
+          <div class="about__text-logo">
+            <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не
+              должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую
+              может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+              <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками.
+                Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту
+                или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил
+                никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+          </div>
+        </div>
+
+      </section>
     </main>
       <footer></footer>
   </body>
