--- a/index.html
+++ b/index.html
@@ -111,6 +111,44 @@
 
       </section>
     </main>
-      <footer></footer>
+      <footer class="footer">
+          <address class="address header__address">
+            <a href="tel:+99999555555">+9 999 555 5555</a>
+            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+           <p>наб. Принсенграхт 263-265, Амстердам</p>
+        </address>
+        <nav class="footer__menu"> 
+          <ul class="footer__menu-list">
+            <li> <a class="footer__menu-link">главная</a> </li>
+            <li> <a class="footer__menu-link">посмотреть лоты </a></li>
+            <li> <a class="footer__menu-link"></a>об аукционе</li>             
+          </ul>
+        </nav>
+        <ul class="footer__social-list">
+          <li class="footer__social-list-item">
+            <a href="#" class="footer__social-link">
+              <img src="./images/yt.svg"
+                   alt="ютуб"
+                   class="footer__social-icon"
+                   >
+            </a>
+          </li>
+          <li class="footer__social-list-item">
+            <a href="#" class="footer__social-link">
+              <img src="./images/vk.svg"
+                   alt="вк"
+                   class="footer__social-icon">
+            </a>
+          </li>
+          <li class="footer__social-list-item">
+            <a href="#" class="footer__social-link">
+              <img src="./images/pinterest.svg"
+                   alt="пинтерест"
+                   class="footer__social-icon">
+            </a>
+          </li>
+        </ul>
+        </ul>
+      </footer>
   </body>
 </html>
