--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </nav>
         <ul class="footer__social-list">
           <li class="footer__social-list-item">
-            <a href="#" class="footer__social-link">
+            <a class="footer__social-link" href="#">
               <img src="./images/yt.svg"
                    alt="ютуб"
                    class="footer__social-icon"
@@ -134,14 +134,14 @@
             </a>
           </li>
           <li class="footer__social-list-item">
-            <a href="#" class="footer__social-link">
+            <a class="footer__social-link" href="#">
               <img src="./images/vk.svg"
                    alt="вк"
                    class="footer__social-icon">
             </a>
           </li>
           <li class="footer__social-list-item">
-            <a href="#" class="footer__social-link">
+            <a class="footer__social-link"href="#">
               <img src="./images/pinterest.svg"
                    alt="пинтерест"
                    class="footer__social-icon">
