--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <header class="header">
     <nav>
       <ul class="header__links-list">
-        <li class="header__links-list-item">
-          <a class="header__links-list-item header__links-item_active">Главная</a>
+        <li class="header__links-list-item header__links-item-active">
+          <a class="header__links-list-item">главная</a>
         </li>
         <li class="header__links-list-item">
           <a class="header__link" href="#">посмотреть лоты</a>
@@ -40,9 +40,10 @@
     <section class="cover">
       <div class="overlay"></div>
       <h1 class="cover__title">
-        O<span class="letter-spacing-extended">но</span>
+        <span class="aligned-text">о<span class="letter-spacing-extended">но</span></span>
         <span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">бe</span></span>
-        <span class="aligned-text aligned-text_right "><span class="letter-spacing-extended">н</span>aд<span class="no-letter-spacing">о</span></span>
+        <span class="aligned-text aligned-text_right">
+        <span class="letter-spacing-extended">н</span>aд<span class="no-letter-spacing">о</span></span>
       </h1>
       <div class="cover__description">
         <p class="cover__description-text">Аукцион    вещей,    в    которые    никто    не     верил</p>
