--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-item-active">
-            <a class="header__link">главная</a>
+            <a class="header__link-active">главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header__link" href="#">посмотреть лоты</a>
@@ -101,7 +101,7 @@
             </a>
           </li>
         </ul>
-        <a class="lots__look-more-link" type="button" href="#">посмотреть больше</a>
+        <a class="lots__look-more-link" href="#">посмотреть больше</a>
       </section>
       <section class="about">
         <div class="about__column">
