--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="./fonts/fonts.css"/>
     <link rel="stylesheet" href="./styles/global.css"/>
     <link rel="stylesheet" href="./styles/style.css"/>
@@ -109,8 +109,7 @@
             <img
               class="about__logo-image"
               src="./images/logo-white.svg"
-              alt="Белый Логотип"
-            />
+              alt="Белый Логотип"/>
           </div>
         </div>
         <div class="about__column">
@@ -150,12 +149,12 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#">
-            <img src="./images/yt.svg" alt="ютуб" class="footer__social-icon" />
+            <img src="./images/yt.svg" alt="ютуб" class="footer__social-icon"/>
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#">
-            <img src="./images/vk.svg" alt="вк" class="footer__social-icon" />
+            <img src="./images/vk.svg" alt="вк" class="footer__social-icon"/>
           </a>
         </li>
         <li class="footer__social-list-item">
@@ -163,8 +162,7 @@
             <img
               src="./images/pinterest.svg"
               alt="пинтерест"
-              class="footer__social-icon"
-            />
+              class="footer__social-icon"/>
           </a>
         </li>
       </ul>
