--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
       <nav>
         <ul class="header__links-list">
-          <li class="header__links-list-item header__links-item-active">
-            <a class="header__link-active">главная</a>
+          <li class="header__links-list-item header__links-item_active">
+            <a class="header__link_active">главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header__link" href="#">посмотреть лоты</a>
@@ -37,7 +37,7 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text_left">о<span class="letter-spacing-extended">но</span></span>
+          О<span class="letter-spacing-extended">но</span>
           <span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">бe</span></span>
           <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>aд<span class="no-letter-spacing">о</span></span>
         </h1>
