--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         </div>
         <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
+          <div class="about__texts">
            <p class="about__text">
               Здесь вы не встретите очередное пафосное собрание невероятно
               дорогого антиквариата. Наши лоты вообще не должны были попасть ни
@@ -131,6 +132,7 @@
               лоты стали культовыми.
             </p>
           </div>
+            </div>
       </section>
     </main>
     <footer class="footer">
@@ -169,3 +171,4 @@
     </footer>
   </body>
 </html>
+<img 
